# minigrep

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
tests/: case_sensitive.rs
