[package]
name = "minigrep"
version = "0.1.0"
authors = ["Omnath Mandal"]
edition = "2021"
description = "A simple version of grep implemented in rust"
readme = "README.md"
repository = "https://github.com/omnathmandal/minigrep/"
license = "MIT"
keywords = ["minigrep", "grep", "cli", "commandline", "rust"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
